# Loom

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  GEMINI.md  OVERVIEW.md  Project.csproj  README.md  USAGE.md  docker-compose.yml  gemini-extension.json  litellm_config.yaml  mcp.json  package.json  pyproject.toml  requirements.txt
.claude-plugin/: manifest.json  marketplace.json
agents/: coder.md  local_creative.md
claude/: .mcp.json  CLAUDE.md  README.md  mcp-config.example.json
claude/.claude-plugin/: plugin.json
claude/agents-fallback/: local_analyst.md
claude/hooks/: claude-hooks.json
claude/mcp/: loom-server.js
claude/policies/: loom.toml
claude/references/: architecture.md
claude/scripts/: after-agent.js  file-guard.js  policy-enforcer.js  read-active-session.js
commands/loom/: agent.toml  craft.toml  execute.toml  orchestrate.toml  resume.toml  status.toml
hooks/: hooks.json
lib/config/: setting-resolver.js
lib/core/: agent-registry.js  logger.js  project-root-resolver.js
lib/hooks/: after-agent-logic.js  before-agent-logic.js  hook-state.js  session-end-logic.js  session-start-logic.js
lib/state/: session-state.js
mcp/: loom-server.js
policies/: loom.toml
references/: architecture.md  orchestration-steps.md
scripts/: bench_ps.py  check-claude-lib-drift.sh  pr_body.md  read-active-session.js  start-swarm.py  test_pipe_minimal.py  train_kan.py  verify_features.py
skills/code-review/: SKILL.md
skills/delegation/: SKILL.md
skills/design-dialogue/: SKILL.md
skills/execution/: SKILL.md
tests/: conftest.py
(+447 files in other folders)
