[project]
name = "loom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core>=0.28.2",
    "litellm>=1.83.2",
    "mcp>=1.27.0",
    "python-dotenv>=1.0.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]
